@@ -5,6 +5,8 @@ LanguageTool Change Log
 -API:
     -WhitespaceRule has been renamed to MultipleWhitespaceRule (WhitespaceRule
      still exists but has been deprecated)
+    -Deprecated some methods whose visibility will be decreased (e.g. from public
+     to protected)
 
 
 2.6 (2014-06-30)
